Fix Freeze: logarithmic vertical axis and negative data range From value

Summary:
Added a new validator for data range From and To values that ensures
user be unable to specify data range values lower than the precision
limit (always positive). The fields are re-validated when the user
checks/unchecks the 'Logarithmic vertical axis' option.

BUG: 421056

Reviewers: tbaumgart

Tags: #kmymoney

Differential Revision: https://phabricator.kde.org/D29446