kmymoney/kmymoneyutils.h
@@ -395,6 +395,27 @@ public:
   static bool canUpdateAllAccounts();
 
   static void showStatementImportResult(const QStringList& resultMessages, uint statementCount);
+
+  /**
+    * This method returns a double converted into a QString
+    * after removing any group separators, trailing zeros,
+    * and decimal separators.
+    *
+    * @param val reference to a qreal value to be converted
+    * @param loc reference to a Qlocale converter
+    * @param f format specifier:
+    *          e - format as [-]9.9e[+|-]999
+    *          E - format as [-]9.9E[+|-]999
+    *          f - format as [-]9.9
+    *          g - use e or f format, whichever is the most concise
+    *          G - use E or f format, whichever is the most concise
+    * @param prec precision representing the number of digits
+    *             after the decimal point ('e', 'E' and 'f' formats)
+    *             or the maximum number of significant digits
+    *             (trailing zeroes are omitted) ('g' and 'G' formats)
+    * @return QString object containing the converted value
+    */
+  static QString normalizeNumericString(const qreal& val, const QLocale& loc, const char f = 'g', const int prec = 6);
 };
 
 #endif
